Prevent very long titles from wrapping on medium-small screens

--- a/mu-plugins/blocks/local-navigation-bar/postcss/style.pcss
+++ b/mu-plugins/blocks/local-navigation-bar/postcss/style.pcss
@@ -126,6 +126,10 @@
 	}
 
 	& .wp-block-group {
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+
 		& p {
 			position: relative;
 			margin-inline-start: var(--wp--preset--spacing--10);
